--- a/alx-project-0x01/styles/globals.css
+++ b/alx-project-0x01/styles/globals.css
@@ -3,3 +3,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* styles/globals.css */
+.input {
+  @apply w-full border px-4 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500;
+}
